# Python.Astro

./: .gitignore  README.ipynb  README.md  pyproject.toml  src.apk
.github/workflows/: pygame-deploy.yml  pylint.yml  pytest.yml
src/: main.py  simulation.py  unifile.py
src/astro/: basics.py
src/config/: config.py
src/graphics/: manager.py
src/physics/: kinetic.py  universe.py  universe_utils.py
src/utils/: name_generator.py  utility.py  vector.py
tests/: test_physics.py
