[project]
name = "Astro"
version = "1.0.0"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "setuptools",
    "pygame",
    "pytest",
    "importlib",
    "pylint",
    "matplotlib"
]

[build-system]
requires = ["poetry-core", "poetry", "setuptools"]

[project.optional-dependencies]
formatting = [
    "pylint",
    "black"
]

[tool.pylint]
init-hook = "import sys; sys.path.append('.')"
disable = ["C0114", "C0115", "C0116", "W1514", "R0902", "R0913", "R0917", "R0903"]
max-line-length = 121
ignore = ["dist", "build", "__pycache__"]
ignored-modules = ["pygame", "typing"]

[tool.pytest.ini_options]
pythonpath = [".", "src", "src"]
testpaths = ["tests"]

[tool.poetry]
package-mode = false
readme = "README.md"
